Fixing some offscreen focus issues

--- a/src/style.css
+++ b/src/style.css
@@ -379,6 +379,11 @@
             }
           }
 
+          &:focus-within {
+            opacity: 1;
+            scale: 1;
+          }
+
           >* {
             grid-area: 1 / 1;
           }
